gdppay: fix buffer leak when new caps are same as old caps

The leak occurs when you got a message with identical caps to the ones you
already had.

https://bugzilla.gnome.org/show_bug.cgi?id=693324